# call_rust_lib_from_python

./: Cargo.toml  README.md
src/: benchmark.py  embed.py  lib.rs  libpitpy.py  libpitrs.py  libpitrs_pyo3.py  pitexample.rs  pyo3_example.rs  raw_example.rs  userland.py
