[package]
name = "Rust_from_Python"
version = "0.1.0"
authors = ["pierre"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pit"
crate-type = ["dylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }


